Allow SpEL reserved words in type package names
Expand the kinds of tokens considered when parsing qualified type
names.  This allows previously reserved words (for example 'mod')
to be used as part of a package name.

Issue: SPR-9862